@@ -2,6 +2,7 @@ git-annex (5.20140307) UNRELEASED; urgency=medium
 
   * Fix zombie leak and general inneficiency when copying files to a
     local git repo.
+  * webapp: Added a "Sync now" item to each repository's menu.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 06 Mar 2014 16:17:01 -0400
 
